tests/baselines/reference/for-of4.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of4.ts(1,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of4.ts (1 errors) ====
    for (var v of [0]) {
                  ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        v;
    }